# alexandria-relay

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  fly-eu.toml  fly.toml
.github/workflows/: ci.yml
src/: main.rs  username_reg.rs
