[package]
name = "alexandria-relay"
version = "0.1.0"
description = "Alexandria P2P relay + bootstrap node (production-grade)"
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "alexandria-relay"
path = "src/main.rs"

[dependencies]
# P2P — same libp2p version as the main app
# Only the protocols the relay needs: relay, kad, identify, transports
libp2p = { version = "0.56.0", features = [
    "kad", "tcp", "quic", "noise", "yamux",
    "identify", "relay", "tokio", "ed25519", "macros",
] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
