[package]
name = "alexandria-relay"
version = "0.1.0"
description = "Alexandria P2P relay + bootstrap node"
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "alexandria-relay"
path = "src/main.rs"

[dependencies]
# P2P — same libp2p version as the main app
# Only the protocols the relay needs: relay, kad, identify, transports
libp2p = { version = "0.56.0", features = [
    "kad", "tcp", "quic", "noise", "yamux",
    "identify", "relay", "tokio", "ed25519", "macros",
    "request-response", "cbor",
] }
libp2p-connection-limits = "0.6"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
rand = "0.8"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Username registry receipts: claim verification + first-seen store
ed25519-dalek = "2"
bs58 = "0.5"
rusqlite = { version = "0.38", features = ["bundled"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
